5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1637_1055.log
== TEST (2019-04-09 11:12:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
import math from *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * a))) / g

if (R >= d):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 4
    import math from *
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:12:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * a))) / g

if (R >= d):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '45.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:18:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * radians(a))) / g
	  
total = d - R

if (total == 0):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 16
    total = d - R
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * radians(a))) / g
	  
total = abs(d - R)

if (total == 0):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 16
    total = abs(d - R)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:21:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * radians(a))) / g
	  
x = abs(d - R)

if (total == 0):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 16
    x = abs(d - R)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:22:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * radians(a))) / g
	  
x = abs(R - d)

if (total == 0):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 16
    x = abs(R - d)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:49:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * radians(a))) / g



if (abs(b - R) <= 0.1) :
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 18
    if (abs(b - R) <= 0.1) :
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:50:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * radians(a))) / g



if(abs(b - R) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 18
    if(abs(b - R) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:50:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * radians(a))) / g



if(abs(b - r) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 18
    if(abs(b - r) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:50:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * radians(a))) / g



if(abs(d - r) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 18
    if(abs(d - r) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:51:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * radians(a))) / g



if(abs(r - d) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 18
    if(abs(r - d) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:51:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * radians(a))) / g



if(abs(r - d) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 18
    if(abs(r - d) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:52:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g



if(abs(r - d) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 18
    if(abs(r - d) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:54:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g



if (abs(r - d) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 18
    if (abs(r - d) <= 0.1):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:54:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g



if (abs(r - d)<=0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 18
    if (abs(r - d)<=0.1):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:55:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g

if(abs(r - d) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 16
    if(abs(r - d) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:56:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = int(input("Digite aqui o angulo do vetor: "))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g

if(abs(r - d) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 16
    if(abs(r - d) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:58:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g

if(abs(r - d) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 16
    if(abs(r - d) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:59:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g

if(abs(r - d) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 16
    if(abs(r - d) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:05:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g

if (abs(r - d) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 16
    if (abs(r - d) <= 0.1):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:05:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g

if (abs(r - d) <= 0.1):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 16
    if (abs(r - d) <= 0.1):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:05:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g

if (abs(r - d) <= "0.1"):
	msg = "sim"
else:
	msg = "nao"
	
print(msg)
-- ERROR:
File "XXXX", line 16
    if (abs(r - d) <= "0.1"):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:06:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g

if (abs(r - d) <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    if (abs(r - d) <= 0.1):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:07:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g

if (abs(d - r) <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    if (abs(d - r) <= 0.1):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:08:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g
	  
x = abs(r -d)

if (x <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    x = abs(r -d)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:10:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g
	  
x = abs(r - d)

if (x <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    x = abs(r - d)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:10:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g
	  
x = (r - d)

if (x <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    x = (r - d)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:10:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

r = ((v0 ** 2) * (sin(2 * a)) / g
	  
sn = abs(r - d)

if (sn <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    sn = abs(r - d)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:07:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * a)) / g
	  
x = abs(d - R)

if (x <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    x = abs(d - R)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:09:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * a)) / g
	  
x = abs(d - R)

if (x <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    x = abs(d - R)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:09:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * a)) / g

if (abs(d - R) <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    if (abs(d - R) <= 0.1):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:10:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * a)) / g

if (abs(d-R) <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    if (abs(d-R) <= 0.1):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:10:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * a)) / g

if ((d-R) <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    if ((d-R) <= 0.1):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:10:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

v0 = float(input("Digite aqui a velocidade inicial: "))

a = radians(float(input("Digite aqui o angulo do vetor: ")))

d = float(input("Digite aqui a distancia entre o passaro e o porco: "))

g = 9.8

R = ((v0 ** 2) * (sin(2 * a)) / g

if (g <= 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 16
    if (g <= 0.1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:18:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("Digite aqui a velocidade: "))
an = int(input("Digite aqui o angulo: "))
D = float(input("Digite aqui a distancia entre o passaro e o porco: "))
g = 9.8
R = ((v0 ** 2) * (sin(2 * an)) / g
x = abs(R - d)
if (x <= 0.1):
	  msg = "sim"
else:
	  msg = "nao"
	  
print(msg)
-- ERROR:
File "XXXX", line 10
    x = abs(R - d)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:19:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("Digite aqui a velocidade: "))
an = int(input("Digite aqui o angulo: "))
D = float(input("Digite aqui a distancia entre o passaro e o porco: "))
g = 9.8
R = ((v0 ** 2) * (sin(2 * an)) / g
x = abs(R - D)
if (x <= 0.1):
	  msg = "sim"
else:
	  msg = "nao"
	  
print(msg)
-- ERROR:
File "XXXX", line 10
    x = abs(R - D)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:19:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("Digite aqui a velocidade: "))
an = radians(int(input("Digite aqui o angulo: ")))
D = float(input("Digite aqui a distancia entre o passaro e o porco: "))
g = 9.8
R = ((v0 ** 2) * (sin(2 * an)) / g
x = abs(R - D)
if (x <= 0.1):
	  msg = "sim"
else:
	  msg = "nao"
	  
print(msg)
-- ERROR:
File "XXXX", line 10
    x = abs(R - D)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:20:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("Digite aqui a velocidade: "))
an = radians(int(input("Digite aqui o angulo: ")))
D = float(input("Digite aqui a distancia entre o passaro e o porco: "))
g = 9.8
R = ((v0 ** 2) * (sin(2 * an)) / g
m = abs(R - D)
if (x <= 0.1):
	  msg = "sim"
else:
	  msg = "nao"
	  
print(msg)
-- ERROR:
File "XXXX", line 10
    m = abs(R - D)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:33:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("Digite aqui a velocidade: "))
an = radians(float(input("Digite aqui o angulo: ")))
D = float(input("Digite aqui a distancia entre o passaro e o porco: "))
g = 9.8
R = ((v0 ** 2) * (sin(2 * an)) / g
x = abs(D - R)
if (x <= 0.1):
	  msg = "sim"
else:
	  msg = "nao"
	  
print(msg)
-- ERROR:
File "XXXX", line 10
    x = abs(D - R)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:34:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("Digite aqui a velocidade: "))
an = radians(float(input("Digite aqui o angulo: ")))
D = float(input("Digite aqui a distancia entre o passaro e o porco: "))
g = 9.8
R = ((v0 ** 2) * (sin(2 * an))) / g
x = abs(D - R)
if (x <= 0.1):
	  msg = "sim"
else:
	  msg = "nao"
	  
print(msg)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:39:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("Digite aqui a velocidade: "))
an = radians(float(input("Digite aqui o angulo: ")))
D = float(input("Digite aqui a distancia entre o passaro e o porco: "))
g = 9.8
R = ((v0 ** 2) * (sin(2 * an))) / g
x = abs(D - R)
if (x <= 0.1):
	  msg = "sim"
else:
	  msg = "nao"
	  
print(msg)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:40:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("Digite aqui a velocidade: "))
an = radians(float(input("Digite aqui o angulo: ")))
D = float(input("Digite aqui a distancia entre o passaro e o porco: "))
g = 9.8
R = ((v0 ** 2) * (sin(2 * an))) / g
x = abs(D - R)
if (x <= 0.1):
	  msg = "sim"
else:
	  msg = "nao"
	  
print(msg)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:44:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("Digite aqui a velocidade: "))
an = radians(float(input("Digite aqui o angulo: ")))
D = float(input("Digite aqui a distancia entre o passaro e o porco: "))
g = 9.8
R = ((v0 ** 2) * (sin(2 * an))) / g
x = abs(D - R)
if (x <= 0.1):
	  msg = "sim"
else:
	  msg = "nao"
	  
print(msg)
-- EXECUTION TIME:
0.296997
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
